--- a/styles.css
+++ b/styles.css
@@ -11,9 +11,13 @@ body, html {
     position: fixed;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(90deg, rgba(50, 50, 50, 0.2) 1px, transparent 1px), 
-                      linear-gradient(rgba(50, 50, 50, 0.2) 1px, transparent 1px);
-    background-size: 40px 40px;
+    background-image: 
+        linear-gradient(135deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%) -50px 0, 
+        linear-gradient(225deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%) -50px 0, 
+        linear-gradient(315deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%), 
+        linear-gradient(45deg, rgba(0, 0, 0, 0.2) 25%, transparent 25%);
+    background-size: 100px 100px;
+    background-color: #333;
     z-index: -1;
 }
 
